<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_kasir"
            android:title="@string/menu_home" />
    </group>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Fitur Lainnya">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_produk"
                    android:icon="@drawable/ic_stars"
                    android:title="@string/menu_product" />
                <item
                    android:id="@+id/nav_riwayat"
                    android:icon="@drawable/ic_history"
                    android:title="@string/menu_history" />
                <item
                    android:id="@+id/nav_pendapatan"
                    android:icon="@drawable/ic_financial"
                    android:title="@string/menu_pendapatan" />
            </group>
        </menu>
    </item>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Akun">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>
</menu>